--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "프로젝트 개요<br>\n",
+    "<br>\n",
+    "이 프로젝트는 와인 리뷰 데이터를 사용하여 감성 분석을 수행하는 것입니다. Naive Bayes, 로지스틱 회귀, SVM, 랜덤 포레스트 모델을 사용하여 감성 분석을 수행하고, 각 모델의 성능을 평가합니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "1.1 데이터 로드"
    ]
   },
